regression with DVD playback and SPU

2480a5159fd80916084777b78bbab59f6c6e789b is the first bad commit
commit 2480a5159fd80916084777b78bbab59f6c6e789b
Author: Rémi Denis-Courmont <remi@remlab.net>
Date:   Fri Jan 14 22:22:14 2022 +0200

    modules: handle error in module_need_var()
    
    This ensures that all variables used have a sane non-empty default (only
    "codec" was left). Then we can assume that NULL is an error rather than
    an empty variable.

 include/vlc_modules.h | 3 +++
 src/libvlc-module.c   | 2 +-
 2 files changed, 4 insertions(+), 1 deletion(-)

scrn-2022-01-31-18-17-02

scrn-2022-01-31-18-17-13