libvlc-module: set default packetizer to any

Set the default packetizer to any so that every packetizer are probed,
instead of NULL which is now considered an error.

Regression from 2480a5159fd80916084777b78bbab59f6c6e789b.

Fixes #26566, #26576